# dogpost

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_LOCAL_MAILSERVER.md  TODO.txt
.github/workflows/: docker-image.yml  rust.yml
meda_tmp/: 2020-12-07-dog-pic-1-fullsize-0.
pt/: 2020-12-07-dog-pic-1.md
src/: blog.rs  email.rs  filenames.rs  github.rs  image.rs  main.rs  media.rs  mishaps.rs  s3.rs  settings.rs  signatureblock.rs  tag.rs  video.rs
