[package]
name = "dogpost"
version = "0.1.1"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2021"

[dependencies]
structopt = "0.3"

imap = "2.3"
native-tls = "0.2" 
mailparse = "0.13"
mime-db = "1.1.0"

regex = "1.5"

chrono = "0.4"

slug = "0.1"

thiserror = "1.0"

rusoto_core = "0.47"
rusoto_s3 = "0.47"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
