[package]
name = "dogpost"
version = "3.0.0"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", default_features = true, features = ["derive", "env"] }
regex = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
slug = "0.1"
thiserror = "1"
tempfile = "3"

base64 = "0.21"
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls", "json"] }

mailparse = "0.14"
mime_guess = "2"
imap = { version = "3.0.0-alpha.12", default-features = false, features=["rustls-tls"]  }

futures = "0.3"
tokio = { version = "1", default-features = false, features = ["sync", "fs", "macros", "rt-multi-thread"] }

log = "0.4"
env_logger = "0.10"

[dev-dependencies]
pretty_assertions = "1.3.0"